# serializer version: 1
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs2_ck2]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg-8dVe7hCcsbXqOeKvDHtbhKm7OBWwUuhWUbKWXbb7B4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgPHtQHuIeAVTNz08OJCXugNlpoMlYigWDZSLDXqOQspQ=',
      'err': 0,
    }),
  ])
# ---
# name: test_streamk_pap_cluster_multicast_gfx1250_golden[cs4_ck1]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArg-nvg4ArkFuCZL9u2cXBb5RLOwFPD-TMcu_wILRDGsns=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_F4SS_MXAE8B32_MXBE8B32_BH_UserArgDncbjg_lkElV1CWpd5mGgh5pMQGofEU0V9HU_9NTBho=',
      'err': 0,
    }),
  ])
# ---
